package NYT.NTransactionClient.NProto;

import "yt_proto/yt/core/misc/proto/guid.proto";
import "yt_proto/yt/core/ytree/proto/attributes.proto";
import "yt/ytlib/transaction_client/proto/action.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqStartTransaction
{
    optional NYT.NYTree.NProto.TAttributeDictionary attributes = 1;
    optional string title = 4;

    optional NYT.NProto.TGuid parent_id = 2;
    repeated NYT.NProto.TGuid prerequisite_transaction_ids = 5;

    reserved 6;

    // If replicate_to_cell_tags are empty then at primary all secondaries are assumed
    // for compatibility reason. To suppress any replication, set dont_replicate to true.
    repeated int32 replicate_to_cell_tags = 7;
    // COMPAT(shakurov): remove this once transaction sharding is deployed to all masters.
    optional bool dont_replicate = 9;

    required int64 timeout = 3;
    optional uint64 deadline = 8;

    optional bool is_cypress_transaction = 10;
}

message TRspStartTransaction
{
    required NYT.NProto.TGuid id = 1;
}

////////////////////////////////////////////////////////////////////////////////

message TReqRegisterTransactionActions
{
    required NYT.NProto.TGuid transaction_id = 1;
    repeated NYT.NTransactionClient.NProto.TTransactionActionData actions = 2;
}

message TRspRegisterTransactionActions
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqReplicateTransactions
{
    repeated NYT.NProto.TGuid transaction_ids = 1;
    required int32 destination_cell_tag = 2;

    optional NYT.NProto.TGuid boomerang_wave_id = 3;
    optional int32 boomerang_wave_size = 4;

    optional NYT.NProto.TGuid boomerang_mutation_id = 5;
    optional string boomerang_mutation_type = 6;
    optional bytes boomerang_mutation_data = 7;
}

message TRspReplicateTransactions
{
    // True if at least one transaction replication has been posted as a direct result of the replication request.
    required bool sync_implied = 1;
}

////////////////////////////////////////////////////////////////////////////////
